--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ set(SOURCES
 
 project(${LOCAL_PROJECT_NAME} VERSION ${LOCAL_PROJECT_VERSION} LANGUAGES C CXX)
 
-add_executable(${LOCAL_PROJECT_NAME})
+add_executable(${LOCAL_PROJECT_NAME} WIN32)
 
 list(TRANSFORM SOURCES PREPEND "src/")
 
